--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "ember-cli": "^2.11.1",
+    "ember-cli-deploy": "^1.0.0",
+    "ember-cli-deploy-create-react-app": "^0.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
